# collab-sqlc

./: .env.example  .gitignore  AGENTS.md  README.md  codb  codb.sh
backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 272adc1b0fb7_query_mgmt.py  93f16d53a438_add_app_settings_table.py  9763fff0a604_init.py  a4d9c8e7b6f5_polyglot_connection_and_result_contracts.py  aeb0e5aad206_add_invites_table.py  b77621b06f2d_add_saved_query_versions.py  bf8ef446249a_expand_api_key_prefix_length.py  ce50418e4dc1_add_secret_key_to_users.py  d8a1f3b2c4e5_add_dbml_context_to_connections.py  e1a2b3c4d5f6_add_query_as_api_columns.py  f3a9c1d2e4b5_query_run_jobs.py
backend/src/: app.py  main.py
backend/src/admin/api/: dependencies.py  routes.py
backend/src/admin/domain/: app_settings_model.py  models.py  schemas.py
backend/src/admin/repository/: audit_repository.py  settings_repository.py
backend/src/admin/service/: audit_service.py  settings_service.py
backend/src/connections/: engine_registry.py
backend/src/history/: tasks.py
backend/src/jobs/: __init__.py  broker.py
backend/src/query_api/: __init__.py
backend/src/shared/: config.py  database.py  redis.py
backend/tests/unit/: test_connection_schemas_ssl.py  test_connection_service_ssl_key.py  test_editor_routes.py  test_engine_registry.py  test_error_handler.py  test_postgres_ssl.py  test_query_api_params.py  test_query_api_service.py  test_query_executor_cancel.py  test_schema_service.py  test_sql_safety.py  test_sso_service.py
cli/: Dockerfile  go.mod  (+7 more)
(+344 files in other folders)
