[project]
name = "collab-sqlc"
version = "0.1.0"
description = "Web-based SQL editor with PostgreSQL and ClickHouse support"
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi==0.115.0",
    "uvicorn[standard]==0.32.0",
    "uvloop==0.21.0",
    "orjson==3.10.0",
    "sqlalchemy[asyncio]==2.0.36",
    "alembic==1.14.0",
    "asyncpg==0.30.0",
    "clickhouse-connect==0.8.0",
    "redis==8.0.1",
    "pydantic==2.10.0",
    "pydantic-settings==2.6.0",
    "sqlglot==26.0.0",
    "PyJWT==2.10.0",
    "argon2-cffi==23.1.0",
    "asyncssh==2.18.0",
    "cryptography==44.0.0",
    "httpx==0.28.0",
    "python-multipart==0.0.18",
    "email-validator==2.3.0",
    "loguru==0.7.3",
    "taskiq==0.12.4",
    "taskiq-redis==1.2.3",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.0",
    "pytest-asyncio==0.24.0",
    "pytest-cov==6.0.0",
    "httpx==0.28.0",
    "mypy==1.13.0",
    "ruff==0.8.0",
    "sqlalchemy[mypy]==2.0.36",
]

[tool.mypy]
strict = true
plugins = ["pydantic.mypy", "sqlalchemy.ext.mypy.plugin"]
python_version = "3.12"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "SIM", "TCH", "RUF"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
